# auto-cxx-stark

./: Cargo.toml  build.rs
src/: input.h  main.rs
